--- a/css/Newfoundation.css
+++ b/css/Newfoundation.css
@@ -1,3 +1,11 @@
+#imagemap  {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, 0%);
+}
+
 .grid-container1 {
   padding-right: 0.9375rem;
   padding-left: 0.9375rem;
@@ -10,6 +18,8 @@ overflow-x: hidden;
 .ball{
   color: white;
   text-transform: uppercase;
+  padding-bottom: 20px;
+  padding-left: 10px;
 }
 .name{
   color: white;
